# hbr_nanase

./: .gitignore  __init__.py  pyproject.toml  service.py
Inquiry/: _define_values.py  _methods.py  _output.py  _search.py  _util.py  module.py
csv_files/: MiddleSkillList.csv
